Création des classes player et position

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(gamejam_1_enseirb)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(gamejam_1_enseirb main.cpp Classes/player.cpp Classes/player.h)
+add_executable(gamejam_1_enseirb main.cpp Classes/player.cpp Classes/player.h Classes/position.cpp Classes/position.h)
